Creación config (falta asignar a terminal)